--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="msapplication-TileColor"   content="#ffffff">
     <meta name="msapplication-TileImage"   content="assets/images/favicon/ms-icon-144x144.png">
     <meta name="theme-color"               content="#ffffff">
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9098313325979831" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/material-dialog.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
