feat: download dialog

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- 2025 Gabe Mods (https://gabemods.github.io/about), All Rights Reserved. -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +11,7 @@
     <meta property="og:type"         content="website">
     <meta property="og:url"          content="https://www.anasmods.github.io/">
     <meta property="og:title"        content="Anas Modz - Official Mod Menus Downloads">
-    <meta property="og:description"  content="Download mod menus for various games from Anas Modz official site.">
+    <meta property="og:description"  content="Download mod menus for various games from Anas Modz official site. Get the latest and most feature-rich mod menus for Grand Battle Royale, Rocket Royale, Subway Surfers, and more.">
     <meta property="og:image"        content="https://www.anasmods.github.io/assets/images/Anas-Modz-Banner.png">
 
     <meta property="twitter:card"        content="summary_large_image">
@@ -76,61 +74,49 @@
     </div>
 
     <main class="cards-container">
-        <div class="card-container">
-            <a href="https://t.me/ANASMODZ/41">
-                <img src="assets/images/Grand-Battle-Royale.png" alt="Project 1 Image">
-                <div class="card-text">
-                    <div class="developer-name">Grand Battle Royale</div>
-                    <p>My first GBR mod menu</p>
-                </div>
-            </a>
+        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/41" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_GBR_1.apk">
+            <img src="assets/images/Grand-Battle-Royale.png" alt="Project 1 Image">
+            <div class="card-text">
+                <div class="developer-name">Grand Battle Royale</div>
+                <p>My first GBR mod menu</p>
+            </div>
         </div>
-        <div class="card-container">
-            <a href="https://t.me/ANASMODZ/43">
-                <img src="assets/images/Grand-Battle-Royale.png" alt="Project 2 Image">
-                <div class="card-text">
-                    <div class="developer-name">Grand Battle Royale</div>
-                    <p>My second mod menu for GBR</p>
-                </div>
-            </a>
+        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/43" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_GBR_2.apk">
+            <img src="assets/images/Grand-Battle-Royale.png" alt="Project 2 Image">
+            <div class="card-text">
+                <div class="developer-name">Grand Battle Royale</div>
+                <p>My second mod menu for GBR</p>
+            </div>
         </div>
-        <div class="card-container">
-            <a href="https://t.me/ANASMODZ/47">
-                <img src="assets/images/Grand-Battle-Royale.png" alt="Project 3 Image">
-                <div class="card-text">
-                    <div class="developer-name">Grand Battle Royale</div>
-                    <p>GBR mod menu version 3 - needs a password <em>(in telegram channel)</em></p>
-                </div>
-            </a>
+        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/46" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_GBR_3.apk">
+            <img src="assets/images/Grand-Battle-Royale.png" alt="Project 3 Image">
+            <div class="card-text">
+                <div class="developer-name">Grand Battle Royale</div>
+                <p>GBR mod menu version 3 - needs a password <em>(in telegram channel)</em></p>
+            </div>
         </div>
-        <div class="card-container">
-            <a href="https://t.me/ANASMODZ/47">
-                <img src="assets/images/Grand-Battle-Royale.png" alt="Project 4 Image">
-                <div class="card-text">
-                    <div class="developer-name">Grand Battle Royale</div>
-                    <p>The latest version of the GBR mod menu with the most amount of features</p>
-                </div>
-            </a>
+        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/57" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_GBR_4.apk">
+            <img src="assets/images/Grand-Battle-Royale.png" alt="Project 4 Image">
+            <div class="card-text">
+                <div class="developer-name">Grand Battle Royale</div>
+                <p>The latest version of the GBR mod menu with the most amount of features</p>
+            </div>
         </div>
-        <div class="card-container">
-            <a href="https://t.me/ANASMODZ">
-                <img src="assets/images/Rocket-Royale.jpeg" alt="Project 5 Image">
-                <div class="card-text">
-                    <div class="developer-name">Rocket Royale</div>
-                    <p>A mod menu for Rocket Royale</p>
-                </div>
-            </a>
+        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_ROCKET_ROYALE.apk">
+            <img src="assets/images/Rocket-Royale.jpeg" alt="Project 5 Image">
+            <div class="card-text">
+                <div class="developer-name">Rocket Royale</div>
+                <p>A mod menu for Rocket Royale</p>
+            </div>
         </div>
-        <div class="card-container">
-    <a href="https://t.me/ANASMODZ/47">
-        <img src="assets/images/Subway-Surfers.jpeg" alt="Project 4 Image">
-        <div class="card-text">
-            <div class="developer-name">Subway Surfers</div>
-            <p>A mod menu for Subway Surfers (my first ever mod menu)</p>
+        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/47" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_SUBWAY_SURFERS.apk">
+            <img src="assets/images/Subway-Surfers.jpeg" alt="Project 4 Image">
+            <div class="card-text">
+                <div class="developer-name">Subway Surfers</div>
+                <p>A mod menu for Subway Surfers (my first ever mod menu)</p>
+            </div>
         </div>
-    </a>
-</div>
-    </main>
+        </main>
 
     <div class="telegram-button-container">
         <a href="https://t.me/ANASMODZ" class="telegram-button" target="_blank">
@@ -145,7 +131,6 @@
           <span>&copy; <span id="current-year"></span> 2025 Gabe Mods. All rights reserved</span>
       </div>
   </footer>
-  <div id="backdrop" class="backdrop hidden"></div>
   <dialog id="settings-modal" class="settings-dialog">
       <div class="modal-content">
           <h2>Settings</h2>
@@ -194,11 +179,23 @@
           </div>
       </div>
   </dialog>
+
+  <dialog id="download-modal" class="download-dialog">
+      <div class="modal-content">
+          <h2>Download APK</h2>
+          <p>Download directly from the website or from telegram.</p>
+          <div class="download-actions">
+              <a id="direct-download-button" class="download-button direct" target="_blank" download>Direct Download</a>
+              <a id="telegram-download-button" class="download-button telegram" target="_blank">Download on Telegram</a>
+          </div>
+          <button id="close-download-modal" class="close-button">Close</button>
+      </div>
+  </dialog>
   <div id="content-fade-overlay"></div>
   <script type="module" src="assets/js/main.js"></script>
   <script type="module" src="assets/js/material-dialog.js"></script>
   <script type="module" src="assets/js/themes.js"></script>
   <script type="module" src="assets/js/header.js"></script>
   <script type="module" src="assets/js/fonts.js"></script>
-</body>
+  <script type="module" src="assets/js/downloads.js"></script> </body>
 </html>
