feat (index.html): added direct download links

--- a/index.html
+++ b/index.html
@@ -74,28 +74,28 @@
     </div>
 
     <main class="cards-container">
-        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/41" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_GBR_1.apk">
+        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/41" data-direct-url="https://github.com/anas-mods/anas-mods.github.io/releases/download/APKs/Grand.Battle.Royale_3.5.3.Mod.Menu.apk">
             <img src="assets/images/Grand-Battle-Royale.png" alt="Project 1 Image">
             <div class="card-text">
                 <div class="developer-name">Grand Battle Royale</div>
                 <p>My first GBR mod menu</p>
             </div>
         </div>
-        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/43" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_GBR_2.apk">
+        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/43" data-direct-url="https://github.com/anas-mods/anas-mods.github.io/releases/download/APKs/Grand.Battle.Royale.Pixel.FPS.Mod.Menu.v3.5.3.x32.apk">
             <img src="assets/images/Grand-Battle-Royale.png" alt="Project 2 Image">
             <div class="card-text">
                 <div class="developer-name">Grand Battle Royale</div>
                 <p>My second mod menu for GBR</p>
             </div>
         </div>
-        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/46" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_GBR_3.apk">
+        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/46" data-direct-url="https://github.com/anas-mods/anas-mods.github.io/releases/download/APKs/Grand.Battle.Royale.Pixel.FPS.Mod.Menu.v3.5.3.apk">
             <img src="assets/images/Grand-Battle-Royale.png" alt="Project 3 Image">
             <div class="card-text">
                 <div class="developer-name">Grand Battle Royale</div>
                 <p>GBR mod menu version 3 - needs a password <em>(in telegram channel)</em></p>
             </div>
         </div>
-        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/55" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_GBR_4.apk">
+        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/55" data-direct-url="https://github.com/anas-mods/anas-mods.github.io/releases/download/APKs/Grand.Battle.Royale.Mod.Menu.3.5.3.apk">
             <img src="assets/images/Grand-Battle-Royale.png" alt="Project 4 Image">
             <div class="card-text">
                 <div class="developer-name">Grand Battle Royale</div>
@@ -109,7 +109,7 @@
                 <p>A mod menu for Rocket Royale</p>
             </div>
         </div>
-        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/47" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_SUBWAY_SURFERS.apk">
+        <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/31" data-direct-url="https://github.com/anas-mods/anas-mods.github.io/releases/download/APKs/Subway.Surfers_3.27.1_Apkpure_sign_src.apk">
             <img src="assets/images/Subway-Surfers.jpeg" alt="Project 4 Image">
             <div class="card-text">
                 <div class="developer-name">Subway Surfers</div>
