fix: settings dialog not opening

--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
           <button id="close-download-modal" class="close-button">Close</button>
       </div>
   </dialog>
+  <div id="backdrop" class="backdrop hidden"></div>
+
   <div id="content-fade-overlay"></div>
   <script type="module" src="assets/js/main.js"></script>
   <script type="module" src="assets/js/material-dialog.js"></script>
