--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="twitter:title"       content="Anas Modz - Official Mod Menus Downloads">
     <meta property="twitter:description" content="Download mod menus for various games from Anas Modz official site.">
     <meta property="twitter:image"       content="https://www.yourwebsite.com/assets/images/Anas-Modz-Banner.png">
-
+    <meta name="google-site-verification" content="HihCOsgH0UVQPbqo7pMEgDNXIXR16hIm907pXZPI3w8" />
     <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicon/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicon/android-icon-192x192.png">
