--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anas Modz</title>
     <meta name="description" content="Download mod menus for various games from Anas Modz official site.">
-    <meta name="keywords"    content="mod menus, Anas Modz, Grand Battle Royale mod, Rocket Royale mod, Subway Surfers mod, game mods, apk mods, game hacks">
-    <meta name="author"      content="Anas Modz">
+    <meta name="keywords" content="mod menus, Anas Modz, Grand Battle Royale mod, Rocket Royale mod, Subway Surfers mod, game mods">
+    <meta name="author" content="Gabe Mods">
 
     <meta property="og:type"         content="website">
     <meta property="og:url"          content="https://www.anasmods.github.io/">
-    <meta property="og:title"        content="Anas Modz - Official Mod Menus Downloads">
-    <meta property="og:description"  content="Download mod menus for various games from Anas Modz official site. Get the latest and most feature-rich mod menus for Grand Battle Royale, Rocket Royale, Subway Surfers, and more.">
-    <meta property="og:image"        content="https://www.anasmods.github.io/assets/images/Anas-Modz-Banner.png">
+    <meta property="og:title"        content="Anas Modz">
+    <meta property="og:description"  content="Download mod menus for various games from Anas Modz official site.">
+    <meta property="og:image"        content="https://www.anasmods.github.io/assets/images/Anas-Modz.jpeg">
 
     <meta property="twitter:card"        content="summary_large_image">
-    <meta property="twitter:url"         content="https://www.yourwebsite.com/">
-    <meta property="twitter:title"       content="Anas Modz - Official Mod Menus Downloads">
+    <meta property="twitter:url"         content="https://anas-mods.github.io/">
+    <meta property="twitter:title"       content="Anas Modz">
     <meta property="twitter:description" content="Download mod menus for various games from Anas Modz official site.">
-    <meta property="twitter:image"       content="https://www.yourwebsite.com/assets/images/Anas-Modz-Banner.png">
+    <meta property="twitter:image"       content="https://www.yourwebsite.com/assets/images/Anas-Modz.jpeg">
     <meta name="google-site-verification" content="HihCOsgH0UVQPbqo7pMEgDNXIXR16hIm907pXZPI3w8" />
     <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicon/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-icon-180x180.png">
