--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="card-container" data-telegram-url="https://t.me/ANASMODZ" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_ROCKET_ROYALE.apk">
             <img src="assets/images/Rocket-Royale.jpeg" alt="Project 5 Image">
             <div class="card-text">
-                <div class="developer-name">Rocket Royale</div>
+                <div class="developer-name">Rocket Royale (Coming Soon)</div>
                 <p>A mod menu for Rocket Royale</p>
             </div>
         </div>
@@ -142,7 +142,7 @@
           </select>
           <div class="setting-row">
               <div class="toggle-setting">
-                  <span class="setting-label">Translucency</span>
+                  <span class="setting-label">Translucent header</span>
                   <label class="switch">
                       <input type="checkbox" id="translucency-toggle">
                       <span class="slider"></span>
