feat: add coming soon animation for rocket royale card

--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
             </div>
         </div>
         <div class="card-container" data-telegram-url="https://t.me/ANASMODZ" data-direct-url="YOUR_DIRECT_DOWNLOAD_LINK_FOR_ROCKET_ROYALE.apk">
-            <img src="assets/images/Rocket-Royale.jpeg" alt="Project 5 Image">
-            <div class="card-text">
-                <div class="developer-name">Rocket Royale (Coming Soon)</div>
-                <p>A mod menu for Rocket Royale</p>
-            </div>
-        </div>
+    <img src="assets/images/Rocket-Royale.jpeg" alt="Project 5 Image">
+    <div class="card-text">
+        <div class="developer-name">Rocket Royale <span class="coming-soon-scan">(Coming Soon)</span></div>
+        <p>A mod menu for Rocket Royale</p>
+    </div>
+</div>
         <div class="card-container" data-telegram-url="https://t.me/ANASMODZ/31" data-direct-url="https://github.com/anas-mods/anas-mods.github.io/releases/download/APKs/Subway.Surfers_3.27.1_Apkpure_sign_src.apk">
             <img src="assets/images/Subway-Surfers.jpeg" alt="Project 4 Image">
             <div class="card-text">
