--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </select>
           <div class="setting-row">
               <div class="toggle-setting">
-                  <span class="setting-label">Translucent header</span>
+                  <span class="setting-label">Translucency</span>
                   <label class="switch">
                       <input type="checkbox" id="translucency-toggle">
                       <span class="slider"></span>
