feat: added translucent card option, fixed header border issues

--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@
               </div>
           </div>
           <div class="setting-row">
+              <div class="toggle-setting">
+                  <span class="setting-label">Card Transparency</span>
+                  <label class="switch">
+                      <input type="checkbox" id="card-transparency-toggle">
+                      <span class="slider"></span>
+                  </label>
+              </div>
+          </div>
+          <div class="setting-row">
               <label for="font-select">Font</label>
               <select id="font-select">
                   <option value="system">System Default</option>
@@ -185,6 +194,7 @@
           </div>
       </div>
   </dialog>
+
 
   <dialog id="download-modal" class="download-dialog">
       <div class="modal-content">
