--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 
     <div class="telegram-button-container">
         <a href="https://t.me/ANASMODZ" class="telegram-button" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo" class="telegram-icon">
-            Join my Telegram channel
-        </a>
+    <img src="/assets/images/telegram.svg" alt="Telegram Logo" class="telegram-icon">
+    Join my Telegram channel
+</a>
     </div>
 
       <footer>
