--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="1;url=https://anas-mods.github.io/maintenance">
     <title>Anas Modz</title>
     <meta name="description" content="Download mod menus for various games from Anas Modz official site.">
     <meta name="keywords" content="mod menus, Anas Modz, Grand Battle Royale mod, Rocket Royale mod, Subway Surfers mod, game mods">
@@ -60,7 +61,6 @@
         <div class="title-container image-title-container hidden">
             <img src="assets/images/Anas-Modz.jpeg" alt="Title" class="image-title" />
         </div>
-        <div class="title-container text-title-container">
             <h1 class="text-title">Anas Mods</h1>
         </div>
     </div>
